--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -147,6 +147,7 @@ state.transitions: Transitions
 state.next_for: 'Next state by default for'
 state.make_initial: 'Make initial'
 state.confirm.delete: 'Are you sure you want delete this state?'
+field: Field
 fields: Fields
 field.new: 'New field'
 field.name: 'Field name'
