--- a/app/Resources/translations/messages.en_GB.yml
+++ b/app/Resources/translations/messages.en_GB.yml
@@ -148,6 +148,7 @@ state.transitions: Transitions
 state.next_for: 'Next state by default for'
 state.make_initial: 'Make initial'
 state.confirm.delete: 'Are you sure you want delete this state?'
+field: Feld
 fields: Fields
 field.new: 'New field'
 field.name: 'Field name'
